# nse-client

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: nse.py
lib/: __init__.py  constants.py  http_client.py  util.py
lib/gateways/: angel.py  moneycontrol.py  nse.py  types.py
nse_client/: __init__.py  constants.py  http_client.py  scrip_fetcher.py  util.py
nse_client/gateways/: angel.py  moneycontrol.py  nse.py  types.py
