[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nse-client"
version = "0.4.0"
description = "A Python library for interacting with NSE (National Stock Exchange) APIs"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "aiohttp>=3.7.0",
    "tenacity>=8.2.3",
]
keywords = ["nse", "stock market", "finance", "api", "data"]

[project.urls]
Homepage = "https://github.com/viswanathkgp12/nse-gateway"
Repository = "https://github.com/viswanathkgp12/nse-gateway"

[dependency-groups]
dev = [
    "setuptools>=68.0.0",
]
